<resources>

    <string name="app_name">Meu Saara</string>
    <string name="title_activity_saara">Meu Saara</string>
    <string name="bt_login">LOGIN</string>
    <string name="bt_facebook">FACEBOOK</string>
    <string name="categoria_titulo">CATEGORIAS</string>
    <string name="alimentacao">FOOD</string>
    <string name="armarinhos">SEWING MATERIALS</string>
    <string name="esportivos">ITEMS FOR SPORTS</string>
    <string name="festas">ITEMS FOR PARTIES</string>
    <string name="artesanato">HANDICRAFT</string>
    <string name="bancos">BANKS</string>
    <string name="bazares">BAZAARS</string>
    <string name="bijuterias">JEWELRY</string>
    <string name="brinquedos">TOYS</string>
    <string name="calcados">SHOES, BAGS</string>
    <string name="cama">HOME</string>
    <string name="carnaval">CARNIVAL</string>
    <string name="confeccao">MAKING</string>
    <string name="decoracao">DECORATION</string>
    <string name="embalagens">DISPOSABLES AND PACKAGING</string>
    <string name="drogaria">DRUGSTORE</string>
    <string name="emporio">EMPORIUM</string>
    <string name="estacionamento">PARKING</string>
    <string name="ferragens">TOOLS</string>
    <string name="flor">FLOWERS</string>
    <string name="joias">JEWELRY AND WATCHES</string>
    <string name="bares">BARES, LANCHONETES E RESTAURANTES</string>
    <string name="lingerie">LINGERIE AND EROTICA</string>
    <string name="malhas">KNITS AND BEACH</string>
    <string name="moda">INDIAN FASHION</string>
    <string name="palhas">STRAWS</string>
    <string name="papelaria">STATIONERY</string>
    <string name="perfumes">PERFUME AND COSMETICS</string>
    <string name="plasticos">PLASTICS AND RUBBER</string>
    <string name="presentes">GIFTS</string>
    <string name="feminina">WOMENS CLOTHING</string>
    <string name="infantil">CHILDRENS CLOTHING</string>
    <string name="silk">SILK AND TRANSFER</string>
    <string name="tecidos">TECIDOS</string>
    <string name="vestuario">CLOTHES</string>
    <string name="outros">OTHERS</string>
    <string name="bt_dialogo_sim">YES</string>
    <string name="bt_dialogo_nao">NO</string>
    <string name="bt_dialogo_ok">OK</string>
    <string name="dialogo_sair_app">Do you really want to leave?</string>
    <string name="bt_add_favoritos">Send to Favorite</string>
    <string name="bt_navigator">GO TO STORE</string>
    <string name="bt_call">CALL</string>
    <string name="popup_info_titulo">INFORMATION</string>
    <string name="popup_like">IF YOU VISITED THE STORE AND ENJOYED, CLICK ON</string>
    <string name="popup_info_semana">Monday to Friday:</string>
    <string name="popup_info_hora_semana">8h to 19h</string>
    <string name="popup_info_sabado">Saturday:</string>
    <string name="popup_info_hora_sabado">9h to 14h</string>
    <string name="mapa_msg_add_favoritos">Store added to favorites.</string>
    <string name="mapa_msg_remove_favoritos">Store removed from favorites.</string>
    <string name="mapa_msg_erro_add_favoritos">This store has been added to favorites.</string>
    <string name="error_conexao_internet">No connection. Please check your internet.</string>
    <string name="load_lojas">Loading stores&#8230;</string>
    <string name="load_categorias">Loading categories&#8230;</string>
    <string name="load_like">Please wait&#8230;</string>
    <string name="error_load_categorias">Unable to load the categories. Please check your internet.</string>
    <string name="favoritos_vazio">You dont have favorite stores.</string>
    <string name="load_favoritos">Loading favorites&#8230;</string>
    <string name="dont_show_popup">Don\'t show again</string>
    <string name="retry">Retry</string>
    <string name="close">Quit</string>

</resources>